create model_user and create passport-jwt

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-uri: "mongodb+srv://Yoel10:yoel2024@dbtesting.lrttm0z.mongodb.net/project_final?retryWrites=true&w=majority&appName=DBTesting"
+MONGO_URI = "mongodb+srv://Yoel10:yoel2024@dbtesting.lrttm0z.mongodb.net/project_final?retryWrites=true&w=majority&appName=DBTesting"
+SECRET_KEY = 'la_contraseña_mas_segura_y_fiable_28/09/2024'
