--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-handlebars": "^7.1.3",
     "mongoose": "^8.5.2",
     "mongoose-paginate-v2": "^1.8.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.7.5"
   }
 }
