--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "01_preentrega",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch src/app.js"
+    "start": "node --watch src/index.js"
   },
   "keywords": [],
   "author": "",
