--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev" : "node --watch src/index.js",
+    "dev": "node --watch src/index.js",
     "start": "node --watch  src/index.js"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "mongoose-paginate-v2": "^1.8.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "zod": "^3.23.8"
   }
 }
