add nodemailer and send email to user for register

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL = "mongodb+srv://Yoel10:yoel2024@dbtesting.lrttm0z.mongodb.net/project_final?retryWrites=true&w=majority&appName=DBTesting"
 SECRET_KEY = 'la_contraseña_mas_segura_y_fiable_28/09/2024'
+EMAIL_ADMIN = 'd0m1de24@gmail.com'
+PASS_ADMIN = 'exte aioq ijqc mtub'
