--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.0",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.2.0"
   }
 }
